adjust status-actions and action-btns position

--- a/src/main/resources/static/Admin/petdetail.html
+++ b/src/main/resources/static/Admin/petdetail.html
@@ -35,7 +35,8 @@
             <div class="right-section">
                 <!-- Status and Action Buttons -->
                 <div class="status-actions">
-                    <div class="status-badge">
+                    <div class="status-kub">
+                        <div class="status-badge">
                         <span class="status-label">Status</span>
                         <span class="status-value">Completed</span>
                     </div>
@@ -49,6 +50,7 @@
                             Edit
                         </button>
                     </div>
+                </div>
                     
                     <!-- Pet and Owner Info Cards -->
                     <div class="info-cards">
