change breadcrumb name to petdetail(in thai language)

--- a/src/main/resources/static/Admin/petdetail.html
+++ b/src/main/resources/static/Admin/petdetail.html
@@ -21,7 +21,7 @@
         <div class="breadcrumb">
             <a href="#">ALL PET</a>
             <span>›</span>
-            <span>PET</span>
+            <span>รายละเอียดสัตว์เลี้ยง</span>
         </div>
 
         <div class="content-wrapper">
