--- a/src/main/resources/static/Admin/add-edit-pet.html
+++ b/src/main/resources/static/Admin/add-edit-pet.html
@@ -13,7 +13,7 @@
         <div class="container">
             <main>
                 <div class="header">
-                    <h1>ALL PET</h1><span class="material-symbols-light--chevron-right-rounded"></span><h2>Add Pet</h2>
+                    <h1>ALL PET</h1><span class="material-symbols-light--chevron-right-rounded"></span><h2 id="formModeTitle">Add Pet</h2>
                 </div>
 
                 <div class="card">
