add userid and petid in posting method

--- a/src/main/resources/static/User/userform.html
+++ b/src/main/resources/static/User/userform.html
@@ -43,7 +43,7 @@
 
     <!-- adoption form -->
     <form id="adoptionForm" method="post" action="/api/userform/submit" enctype="multipart/form-data">
-        
+        <input type="hidden" id="userId" name="userId">
         <input type="hidden" id="petID" name="petId">
 
 
