--- a/src/main/resources/static/Admin/add-edit-pet.html
+++ b/src/main/resources/static/Admin/add-edit-pet.html
@@ -8,13 +8,13 @@
     <title>Pet Adoption All Pet</title>
 </head>
 <body>
-    <div class="container">
+    
         <!-- Side bar -->
-        <div id="sidebar"></div>
-        
+        <div id="sidebar">
+        <div class="container">
         <!-- Main Content -->
-        <main></main>
-    </div>
+        <main>content ฝั่งซ้าย ของ sidebar</main>
+        </div>
 
 
     <script src="sidebar.js"></script>
