adds two new table in database

--- a/src/main/resources/static/showAnimal.html
+++ b/src/main/resources/static/showAnimal.html
@@ -69,6 +69,8 @@
                     <th>Status</th>
                     <th>Identity Doc</th>
                     <th>Residence Doc</th>
+                    <th>Resultestimate</th>
+                    <th>meetDate</th>
                 </tr>
             </thead>
             <tbody>
@@ -112,6 +114,8 @@
                         <td>${user.status || ''}</td>
                         <td>${user.identityDoc !== "-" ? `<a class="download-link" href="http://localhost:8081/api/userform/download/${user.identityDoc}">${user.identityDoc}</a>` : '-'}</td>
                         <td>${user.residenceDoc !== "-" ? `<a class="download-link" href="http://localhost:8081/api/userform/download/${user.residenceDoc}">${user.residenceDoc}</a>` : '-'}</td>
+                        <td>${user.resultEstimate || ''}</td>
+                        <td>${user.meetDate || ''}</td>
                     `;
 
                     tbody.appendChild(tr);
