--- a/src/main/resources/static/petdetail.html
+++ b/src/main/resources/static/petdetail.html
@@ -54,7 +54,7 @@
                         <li>ชื่อ  <span id="petNames"></span></li>
                         <li>ชนิด  <span id="petType"></span></li>
                         <li>เพศ <span id="petGender"></span></li>
-                        <li>อายุ <span id="petAge"></span> ปี</li>
+                        <li>วันเกิด <span id="petDateBirth"></span> </li>
                         <li>สายพันธุ์ <span id="petBreed"></span></li>
                         <li>น้ำหนัก <span id="petWeight"></span>  กิโลกรัม</li>
                     </ul>
