--- a/src/main/resources/static/Admin/requests.html
+++ b/src/main/resources/static/Admin/requests.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="th">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pet Adoption - รายการคำขอรับเลี้ยง</title>
     <link rel="stylesheet" href="requests.css">
     <title>Request</title>
-        
+
 </head>
+
 <body>
     <!-- Side bar -->
-        <div id="sidebar"></div>
+    <div id="sidebar"></div>
 
-        <!-- Container -->
-        <div class="container">
-        
+    <!-- Container -->
+    <div class="container">
+
         <!-- Main -->
         <main>
             <div class="breadcrumb">
@@ -24,7 +26,14 @@
             <div class="content-wrapper">
                 <!-- Form Section -->
                 <div class="form-section">
+                    <div id="form-name">
+                        <div class="form-group"><label>UserName</label>
+                            <input type="text" value="xxxxxxxx" readonly>
+                        </div>
+                    </div>
+                    <br>
                     <div class="form-row">
+
                         <div class="form-group">
                             <label>ชื่อจริง</label>
                             <input type="text" value="xxxxxxxx" readonly>
@@ -112,7 +121,8 @@
                     <div class="pet-card">
                         <div class="pet-card-title">ข้อมูลสัตว์เลี้ยง</div>
                         <div class="pet-image-container">
-                            <img src="https://images.unsplash.com/photo-1583337130417-3346a1be7dee?w=300&h=300&fit=crop" alt="SHOKUN" class="pet-image">
+                            <img src="https://images.unsplash.com/photo-1583337130417-3346a1be7dee?w=300&h=300&fit=crop"
+                                alt="SHOKUN" class="pet-image">
                         </div>
                         <div class="pet-details">
                             <div class="pet-detail-item">ชื่อ SHOKUN</div>
@@ -134,4 +144,5 @@
 
     <script src="sidebar.js"></script>
 </body>
+
 </html>
