--- a/src/main/resources/static/Admin/add-edit-pet.html
+++ b/src/main/resources/static/Admin/add-edit-pet.html
@@ -12,8 +12,7 @@
 
         <div class="container">
             <main>
-                <div class="header">
-                    <h1>ALL PET</h1><span class="material-symbols-light--chevron-right-rounded"></span><h2 id="formModeTitle">Add Pet</h2>
+                <div class="header" id="breadcrumbHeader">
                 </div>
 
                 <div class="card">
@@ -139,7 +138,7 @@
             </main>
         </div>
 
-    <script src="add-edit-pet.js"></script>
+    <script src="add-edit-pet.js" ></script>
     <script src="sidebar.js"></script>
 </body>
 </html>
