--- a/src/main/resources/static/Admin/add-edit-pet.html
+++ b/src/main/resources/static/Admin/add-edit-pet.html
@@ -12,8 +12,7 @@
 
         <div class="container">
             <main>
-                <div class="header" id="breadcrumbHeader">
-                </div>
+                <div id="breadcrumb-placeholder" class="header"></div>
 
                 <div class="card">
                     <div class="card-header">
@@ -140,5 +139,6 @@
 
     <script src="add-edit-pet.js" ></script>
     <script src="sidebar.js"></script>
+    </div> <script src="breadcrumb.js" defer></script>
 </body>
 </html>
