--- a/src/main/resources/static/User/status.html
+++ b/src/main/resources/static/User/status.html
@@ -78,9 +78,23 @@
             </div>
 
             <div class="card-actions">
-               <button id="edit-form-btn" class="btn btn-outline-sm">แก้ไข</button>
+            <button id="edit-form-btn" class="btn btn-outline-sm">
+            <span class="edit-icon-wrapper" aria-hidden="true">
+                <svg class="edit-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <g fill="none" stroke="currentColor" stroke-width="2">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M4.333 16.048L16.57 3.81a2.56 2.56 0 0 1 3.62 3.619L7.951 19.667a2 2 0 0 1-1.022.547L3 21l.786-3.93a2 2 0 0 1 .547-1.022"/>
+                    <path d="m14.5 6.5l3 3"/>
+                </g>
+                </svg>
+            </span>
+            <span>แก้ไข</span>
+            </button>
+
             </div>
-      </div>
+
+
+            </div>
 
         </section>
 
