add sidebar and breadcrumb

--- a/src/main/resources/static/Admin/dashboard.html
+++ b/src/main/resources/static/Admin/dashboard.html
@@ -10,42 +10,11 @@
 <body>
     <div class="container">
         <!-- Sidebar -->
-        <aside class="sidebar">
-            <div class="logo">
-                <img class="logo-icon" src="../homepageResources/pet-house.png" alt="icon">
-                <div class="logo-text">
-                    <h2>Pet</h2>
-                    <h2>Adoption</h2>
-                </div>
-            </div>
-
-            <nav class="nav-menu">
-                <div class="nav-item active" id="nav-dashboard">
-                    <img src="image-resources/dashboard-icon.svg" alt="Dashboard">
-                    <img class="icon-active" src="image-resources/dashboard-icon-gradient.svg" alt="Dashboard">
-                    <span>Dashboard</span>
-                </div>
-                <div class="nav-item" id="nav-all-pet">
-                    <img src="image-resources/allpet-icon.svg" alt="All pet">
-                    <img class="icon-active" src="image-resources/allpet-icon-gradient.svg" alt="All pet">
-                   <span>All Pet</span>
-                </div>
-                <div class="nav-item" id="nav-schedule">
-                    <img src="image-resources/schedule-icon.svg" alt="Schedule">
-                    <img class="icon-active" src="image-resources/schedule-icon-gradient.svg" alt="Schedule">
-                    <span>Schedule</span>
-                </div>
-            </nav>
-
-            <div class="nav-item logout" id="nav-logout">
-                <img src="image-resources/logout-icon.svg" alt="Log out">
-                <span>Log out</span>
-            </div>
-        </aside>
+        <div id="sidebar"></div>
 
         <!-- Main Content -->
         <main class="main-content">
-            <h1 class="dashboard-header">DASHBOARD</h1>
+            <div id="breadcrumb-placeholder" class="header"></div>
 
             <!-- Grid content-->
             <div class="grid">
@@ -167,6 +136,8 @@
 
     <script src="dashboard.js"></script>     
     <script src="chart.js"></script>
+    <script src="sidebar.js"></script>  
+    </div> <script src="breadcrumb.js" defer></script>
     <!-- Import JS library to create chart-->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>               
 </body>
